[package]
name = "http-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
image = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
